--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
             </div>
             <div class="container__hero">
                 <div class="hero__image">
-                    <img src="./assets/images/hero/dualshock_5_concept_by_snoreyn_ddqh2pi-fullview-removebg 1.png" alt="">
+                    <img src="./assets/images/hero/dualshock_51.png" alt="">
                 </div>
             </div>
         </section>
